--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Media Queries</h1>
+    <div id="catalogo-main">
+        <h1>Catalogo de Peliculas - laboyos Films</h1>
+        <div class="catalogo-inicio">
+            <img class="catalogo" src="img/avatar_185x273.jpg" alt="Avatar">
+            <p>Avatar - Año 2014</p>
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/avengers_564x824.jpg" alt="Avengers">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/ElPadrino_197x256.jpg" alt="El Padrino">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/gladiador_1000x1426.jpg" alt="Gladiador">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/it_196x257.jpg" alt="IT">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/titanic_1007x1500.jpg" alt="Titanic">
+        </div>
+    </div>
 </body>
 </html>
