--- a/index.html
+++ b/index.html
@@ -9,25 +9,56 @@
 <body>
     <div id="catalogo-main">
         <h1>Catalogo de Peliculas - laboyos Films</h1>
-        <div class="catalogo-inicio">
-            <img class="catalogo" src="img/avatar_185x273.jpg" alt="Avatar">
+        <div class="content-img">
+            <img class="catalogo" src="img/alien_320x470.jpg" alt="Alien">
             <p>Avatar - Año 2014</p>
         </div>
         <div class="content-img">
-            <img class="catalogo" src="img/avengers_564x824.jpg" alt="Avengers">
+            <img class="catalogo" src="img/amelie_320x470.jpg" alt="Amelie">
         </div>
         <div class="content-img">
-            <img class="catalogo" src="img/ElPadrino_197x256.jpg" alt="El Padrino">
+            <img class="catalogo" src="img/antes-que-el-diablo-sepa_320x470.jpg" alt="Antes que el diablo sepa">
         </div>
         <div class="content-img">
-            <img class="catalogo" src="img/gladiador_1000x1426.jpg" alt="Gladiador">
+            <img class="catalogo" src="img/avatar_320x470.jpg" alt="Avatar">
         </div>
         <div class="content-img">
-            <img class="catalogo" src="img/it_196x257.jpg" alt="IT">
+            <img class="catalogo" src="img/el-club-de-la-pelea_320x470.jpg" alt="El club de la pelea">
         </div>
         <div class="content-img">
-            <img class="catalogo" src="img/titanic_1007x1500.jpg" alt="Titanic">
+            <img class="catalogo" src="img/el-padrino_320x470.jpg" alt="El Padrino">
         </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/el-perfecto-asesino_320x470.jpg" alt="El perfecto Asesino">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/el-senor-de-los-anillos_320x470.jpg" alt="El señor de los anillos">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/eterno-resplandor_320x470.jpg" alt="Eterno Resplandor">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/gladiador_320x470.jpg" alt="Gladiador">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/harry-potter_320x470.jpg" alt="Harry Potter">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/kill-bill_320x470.jpg" alt="Kill Bill">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/la-vida-de-los-otros_320x470.jpg" alt="La vida de los otros">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/matrix_320x470.jpg" alt="Matrix">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/memento_320x470.jpg" alt="Memento">
+        </div>
+        <div class="content-img">
+            <img class="catalogo" src="img/old-boy_320x470.jpg" alt="Old Boy">
+        </div>
+
     </div>
 </body>
 </html>
