Porcentaje de Imagenes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Catalogo de Peliculas - laboyos Films</h1>
         <div class="content-img">
             <img class="catalogo" src="img/alien_320x470.jpg" alt="Alien">
-            <p>Alien - Año 1985</p>
+<!--             <p>Alien - Año 1985</p> -->
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/amelie_320x470.jpg" alt="Amelie">
