--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <h1>Catalogo de Peliculas - laboyos Films</h1>
         <div class="content-img">
             <img class="catalogo" src="img/alien_320x470.jpg" alt="Alien">
-<!--             <p>Alien - Año 1985</p> -->
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/amelie_320x470.jpg" alt="Amelie">
@@ -60,5 +59,6 @@
         </div>
 
     </div>
+    <iframe src="https://jdavid80.github.io/adsi-1961869/" frameborder="1"></iframe>
 </body>
 </html>
