--- a/index.html
+++ b/index.html
@@ -5,27 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="catalogo-main">
         <h1>Catalogo de Peliculas - laboyos Films</h1>
         <div class="content-img">
             <img class="catalogo" src="img/alien_320x470.jpg" alt="Alien">
+            <h3>Alien</h3>
+            <p>Año: 1977</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/amelie_320x470.jpg" alt="Amelie">
+            <h3>Amelie</h3>
+            <p>Año: 2001</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/antes-que-el-diablo-sepa_320x470.jpg" alt="Antes que el diablo sepa">
+            <h3>Antes que el diablo sepa</h3>
+            <p>Año: 2001</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/avatar_320x470.jpg" alt="Avatar">
+            <h3>Avatar</h3>
+            <p>Año: 2011</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/el-club-de-la-pelea_320x470.jpg" alt="El club de la pelea">
+            <h3>El club de la pelea</h3>
+            <p>Año: 1997</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/el-padrino_320x470.jpg" alt="El Padrino">
+            <h3>El Padrino</h3>
+            <p>Año: 1972</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/el-perfecto-asesino_320x470.jpg" alt="El perfecto Asesino">
@@ -57,8 +70,12 @@
         <div class="content-img">
             <img class="catalogo" src="img/old-boy_320x470.jpg" alt="Old Boy">
         </div>
-
-    </div>
-    <iframe src="https://jdavid80.github.io/adsi-1961869/" frameborder="1"></iframe>
+        <br>
+        <div>
+            <iframe class="movil" src="index.html" frameborder="1"></iframe>
+            <iframe class="tablet" src="index.html" frameborder="1"></iframe>
+        </div>
+    </div> 
+    
 </body>
 </html>
