Menu con Subitems

--- a/catalogo.html
+++ b/catalogo.html
@@ -42,9 +42,13 @@
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/el-perfecto-asesino_320x470.jpg" alt="El perfecto Asesino">
+            <h3>Perfecto Asesino</h3>
+            <p>Año: 1993</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/el-senor-de-los-anillos_320x470.jpg" alt="El señor de los anillos">
+            <h3>Señor de los anillos</h3>
+            <p>Año: 2007</p>
         </div>
         <div class="content-img">
             <img class="catalogo" src="img/eterno-resplandor_320x470.jpg" alt="Eterno Resplandor">
@@ -71,10 +75,10 @@
             <img class="catalogo" src="img/old-boy_320x470.jpg" alt="Old Boy">
         </div>
         <br>
-        <div>
+        <!-- <div>
             <iframe class="movil" src="index.html" frameborder="1"></iframe>
             <iframe class="tablet" src="index.html" frameborder="1"></iframe>
-        </div>
+        </div> -->
     </div> 
     
 </body>
