--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="menu">
             <a href="#">Inicio</a>
             <a href="catalogo.html" target="_blank">Catalogo</a>
-            <a href="#">Contactenos</a>
+            <a href="menu-subitems.html" target="_blank">Contactenos</a>
             <a href="#">Trabaja con Nosotros</a>
             <a href="#">Blog</a>
         </div>
