--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#">Inicio</a>
             <a href="catalogo.html" target="_blank">Catalogo</a>
             <a href="menu-subitems.html" target="_blank">Menu-Subitems</a>
-            <a href="#">Trabaja con Nosotros</a>
+            <a href="retos.html">Retos</a>
             <a href="#">Blog</a>
         </div>
     </div>
