--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="catalogo.html" target="_blank">Catalogo</a>
             <a href="menu-subitems.html" target="_blank">Menu-Subitems</a>
             <a href="retos.html">Retos</a>
+            <a href="menu-iconos.html">Menu-Icons</a>
             <a href="#">Blog</a>
         </div>
     </div>
