--- a/menu-iconos.html
+++ b/menu-iconos.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú Iconos</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="icons/all.css">
     <link rel="stylesheet" href="css/menu-iconos.css">
+    <script src="js/script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Menu Iconos</h1>
-    <li><a href="#"><i class="fas fa-home"></i><span class="margen-izquierdo">Inicio</span></a></li>
-    <li><a href="#"><i class="fas fa-rocket"></i><span class="margen-izquierdo">Proyectos</span></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
-    <li><a href="#"></a></li>
+    <div id="mostrar-nav">
+        <label onclick="mostrarMenu()"><i class="fas fa-bars"></i></label>
+        <nav id="menu-principal">
+            <ul class="menu"></ul>        
+                <li><a href="#"><i class="fas fa-home"></i><span>Inicio</span></a></li>
+                <li><a href="#"><i class="fab fa-weixin"></i><span>Quienes Somos</span></a></li>
+                <li><a href="#"><i class="fas fa-phone"></i><span>Contactenos</span></a></li>
+                <li><a href="#"><i class="fas fa-briefcase"></i><span>Trabaja con Nosotros</span></a></li>
+                <li><a href="#"><i class="fab fa-blogger"></i><span>Blog</span></a></li>
+                <li><a href="#"><i class="fas fa-building"></i><span>Empresas</span></a></li>
+            </ul> 
+        </nav>
+    </div>
+    <div class="content">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quisquam quaerat tempore recusandae asperiores libero ipsum eum doloribus a quas blanditiis, veniam aliquid. Suscipit enim et facilis quo temporibus non?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quisquam quaerat tempore recusandae asperiores libero ipsum eum doloribus a quas blanditiis, veniam aliquid. Suscipit enim et facilis quo temporibus non?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quisquam quaerat tempore recusandae asperiores libero ipsum eum doloribus a quas blanditiis, veniam aliquid. Suscipit enim et facilis quo temporibus non?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quisquam quaerat tempore recusandae asperiores libero ipsum eum doloribus a quas blanditiis, veniam aliquid. Suscipit enim et facilis quo temporibus non?</p>
+    </div>
 </body>
 </html>
