--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Responsive</title>
     <link rel="stylesheet" href="css/menuresp.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     <h1>Menú Responsive</h1>
@@ -18,6 +19,7 @@
             <a href="retos.html">Retos</a>
             <a href="menu-iconos.html">Menu-Icons</a>
             <a href="#">Blog</a>
+            <input type="button" value="Mostrar Dominio" onclick="mostrarHostName()">
         </div>
     </div>
 </body>
