Cambios Menu Responsive

--- a/menu-iconos.html
+++ b/menu-iconos.html
@@ -14,7 +14,7 @@
     <div id="mostrar-nav">
         <label onclick="mostrarMenu()"><i class="fas fa-bars"></i></label>
         <nav id="menu-principal">
-            <ul class="menu"></ul>        
+            <ul class="menu">   
                 <li><a href="#"><i class="fas fa-home"></i><span>Inicio</span></a></li>
                 <li><a href="#"><i class="fab fa-weixin"></i><span>Quienes Somos</span></a></li>
                 <li><a href="#"><i class="fas fa-phone"></i><span>Contactenos</span></a></li>
