--- a/index.html
+++ b/index.html
@@ -3,23 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Responsive</title>
-    <link rel="stylesheet" href="css/menuresp.css">
-    <script src="js/script.js"></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="fonts/style.css">
 </head>
 <body>
-    <h1>Menú Responsive</h1>
-    <div class="nav">
-        <label for="toggle">&#9776</label>
-        <input type="checkbox" id="toggle">
-        <div class="menu">
-            <a href="#">Inicio</a>
-            <a href="catalogo.html" target="_blank">Catalogo</a>
-            <a href="menu-subitems.html" target="_blank">Menu-Subitems</a>
-            <a href="retos.html">Retos</a>
-            <a href="menu-iconos.html">Menu-Icons</a>
-            <a href="#">Blog</a>
-        </div>
+    <header>
+        <nav>
+            <div class="titulo">
+                <h1>Mi Aprendizaje</h1>
+            </div>
+            <ul>
+                <li><a href="#"><span class="icon-home"></span>Inicio</a></li>
+                <li><a href="#"><span class="icon-text-document"></span>Formulario</a></li>
+                <li><a href="#"><span class="icon-menu"></span>Menús</a>
+                    <ul class="children">
+                        <li><a href="menu-subitems.html"><span class="icon-don-single"></span>Subitems No Resp</a></li>
+                        <li><a href="menu-responsive.html"><span class="icon-don-single"></span>Responsive 1</a></li>
+                        <li><a href="menu-iconos.html"><span class="icon-don-single"></span>Responsive 2</a></li>
+                    </ul>
+                </li>
+                <li><a href="#"><span class="icon-images"></span>Imagenes</a></li>
+                <li><a href="#"><span class="icon-mail"></span>Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="main-content">
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos unde odit deleniti sint ullam, rerum sunt, velit neque quas, consequuntur beatae quibusdam. Adipisci velit dicta nostrum, omnis eum eos eveniet autem doloribus porro numquam animi laudantium, dignissimos explicabo fugit tenetur ex, quaerat culpa quasi iure. Quibusdam quidem rerum atque quisquam sit ea tenetur, placeat aut voluptate sed deserunt perferendis nulla ipsum! Odio ipsum eligendi accusantium ad commodi excepturi assumenda eaque veritatis aperiam porro, in sit unde ipsam aliquam consectetur animi voluptatem consequuntur, corrupti, debitis corporis sed doloremque minus. Nisi itaque provident praesentium neque non molestiae commodi laboriosam reiciendis rem dolorem.</p>
     </div>
 </body>
 </html>
