--- a/menu-responsive.html
+++ b/menu-responsive.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/menu-responsive.css">
-    <link rel="stylesheet" href="fonts/style.css">
+    <title>Menu Responsive</title>
+    <link rel="stylesheet" href="css/menuresp.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#"><span class="icon-home"></span>Inicio</a></li>
-                <li><a href="#"><span class="icon-text-document"></span> Formulario</a></li>
-                <li><a href="#">Menús</a>
-                    <ul>
-                        <li><a href="#">Subitems No Resp</a></li>
-                        <li><a href="#">Responsive 1</a></li>
-                        <li><a href="#">Responsive 2</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">imagenes</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+    <h1>Menú Responsive</h1>
+    <div class="nav">
+        <label for="toggle">&#9776</label>
+        <input type="checkbox" id="toggle">
+        <div class="menu">
+            <a href="#">Inicio</a>
+            <a href="catalogo.html" target="_blank">Catalogo</a>
+            <a href="menu-subitems.html" target="_blank">Menu-Subitems</a>
+            <a href="retos.html">Retos</a>
+            <a href="menu-iconos.html">Menu-Icons</a>
+            <a href="#">Blog</a>
+        </div>
+    </div>
 </body>
 </html>
