--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="fonts/style.css">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 <body>
     <header>
+        <div class="menu_bar">
+            <a class="bt-menu" href="#"><span class="icon-list"></span>Mi Aprendizaje</a>
+        </div>
         <nav>
             <div class="titulo">
                 <h1>Mi Aprendizaje</h1>
@@ -16,7 +20,7 @@
             <ul>
                 <li><a href="#"><span class="icon-home"></span>Inicio</a></li>
                 <li><a href="#"><span class="icon-text-document"></span>Formulario</a></li>
-                <li><a href="#"><span class="icon-menu"></span>Menús</a>
+                <li class="subMenu"><a href="#"><span class="icon-menu"></span>Menús<span class="icon-chevron-small-down"></span></a>
                     <ul class="children">
                         <li><a href="menu-subitems.html"><span class="icon-don-single"></span>Subitems No Resp</a></li>
                         <li><a href="menu-responsive.html"><span class="icon-don-single"></span>Responsive 1</a></li>
@@ -31,5 +35,6 @@
     <div class="main-content">
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos unde odit deleniti sint ullam, rerum sunt, velit neque quas, consequuntur beatae quibusdam. Adipisci velit dicta nostrum, omnis eum eos eveniet autem doloribus porro numquam animi laudantium, dignissimos explicabo fugit tenetur ex, quaerat culpa quasi iure. Quibusdam quidem rerum atque quisquam sit ea tenetur, placeat aut voluptate sed deserunt perferendis nulla ipsum! Odio ipsum eligendi accusantium ad commodi excepturi assumenda eaque veritatis aperiam porro, in sit unde ipsam aliquam consectetur animi voluptatem consequuntur, corrupti, debitis corporis sed doloremque minus. Nisi itaque provident praesentium neque non molestiae commodi laboriosam reiciendis rem dolorem.</p>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
