add jquery local

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="fonts/style.css">
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/jquery_all.js"></script>
 </head>
 <body>
     <header>
