--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="menu-iconos.html"><span class="icon-don-single"></span>Responsive 2</a></li>
                     </ul>
                 </li>
-                <li><a href="#"><span class="icon-images"></span>Imagenes</a></li>
+                <li><a href="mi-bootstrap.html"><span class="icon-news"></span>MiBootstrap</a></li>
                 <li><a href="#"><span class="icon-mail"></span>Contacto</a></li>
             </ul>
         </nav>
