--- a/mi-bootstrap.html
+++ b/mi-bootstrap.html
@@ -30,8 +30,42 @@
     <button type="button" class="margen-botones btn btn-success" value="guardar">Guardar</button>
     <button type="button" class="margen-botones btn btn-info" value="info">Información</button>
     <button type="button" class="margen-botones btn btn-warning" value="advertencia">Advertencia</button>
-    <button type="button" class="margen-botones btn btn-danger" value="peligro">Peligro</button>
-
-
+    <button type="button" class="margen-botones btn btn-danger" value="peligro">Peligro</button><br><br>
+    <h2>Botones Agrupados</h2>
+    <div class="btn-group">
+        <button type="button" class="btn btn-primary" value="ADSI-1961869">ADSI-1961869</button>
+        <button type="button" class="btn btn-primary" value="ADSI-1802853">ADSI-1802853</button>
+        <button type="button" class="btn btn-primary" value="ADSI-2027549">ADSI-2027549</button>
+        <button type="button" class="btn btn-primary" value="ADSI-2205627">ADSI-2205627</button>
+    </div><br>
+    <div class="insignias">
+    <h2>Insignias (Badges)</h2>
+        <a class="inline-space" href="#">Comentarios    <span class="big-font badge badge-pill badge-secondary">5</span></a><br>
+        <a class="inline-space" href="#">Noticias <span class="big-font badge badge-pill badge-secondary">6</span></a><br>
+        <a class="inline-space" href="#">Actualizaciones <span class="big-font badge badge-pill badge-secondary">2</span></a><br>
+    </div>
+    <br>
+    <h2>Barras de Progreso</h2>
+    <div class="progress">
+        <div id="barra-progreso" class="bg-success progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90"
+        aria-valuemin="0" aria-valuemax="100" style="width:90%">90%
+        </div>
+    </div><br>
+    <div class="progress">
+        <div id="barra-progreso" class="bg-warning progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="70"
+        aria-valuemin="0" aria-valuemax="100" style="width:70%">70%
+        </div>
+    </div><br>
+    <div class="progress">
+        <div id="barra-progreso" class="bg-info progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="40"
+        aria-valuemin="0" aria-valuemax="100" style="width:40%">40%
+        </div>
+    </div><br>
+    <div class="progress">
+        <div id="barra-progreso" class="bg-danger progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="10"
+        aria-valuemin="0" aria-valuemax="100" style="width:10%">10%
+        </div>
+    </div><br>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit quam soluta ipsam voluptatum laboriosam dolorem earum asperiores quae. Aspernatur omnis velit rem illum ex dignissimos quam quos tempore consequatur recusandae.</p>
 </body>
 </html>
